# PulseFeed

./: .env.example  .gitignore  CLAUDE.md  LICENSE  docker-compose.pulsegen.yml  docker-compose.yml  warp-demo.html
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test_out.txt  test_out2.txt
backend/agents/: feed_personalizer.py  research_agent.py
backend/generator/: agent.py  beat_schedule.py  celery_app.py  db.py  demo.py  demo_recommender.py  inline_pipeline.py  prompts.py  retriever_agent.py  status_store.py  storage_orchestrator.py  tasks.py  trend_analyst.py  trend_scheduler.py
backend/generator_service/: main.py  railway.toml  swarm.py
backend/generator_worker/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/generator_worker/src/: celery_app.py  config.py  retry.py  schemas.py
backend/generator_worker/src/connectors/: __init__.py  arxiv_connector.py  base.py  devto_connector.py  github_connector.py  hackernews_connector.py  huggingface_connector.py  rss_connector.py
backend/generator_worker/src/pipeline/: extractor.py  gatekeeper.py
backend/generator_worker/src/storage/: pg_router.py
backend/mcp_servers/: sql_server.py  storage_server.py  vector_server.py
backend/routes/: events.py  feed.py  feed_v2.py  generator_obs.py  users.py
backend/security/: __init__.py  headers.py
backend/tests/: conftest.py  test_agent_pipeline.py  test_agents.py  test_auth.py  test_brief.py  test_events.py  test_feed.py  test_hard_agent.py  test_hard_integration.py  test_hard_validation.py  test_security.py  test_users.py
docs/: TDD-MCP-Generator.md  llama-cpp-setup.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/archive/: LandingPage.jsx
frontend/src/components/: AtmosphericBackground.jsx  BrainLoader.jsx  ChipSelection.jsx  DashboardLayout.jsx  EventCard.jsx  InsightBrief.jsx  InterestPicker.jsx  NewsCard.jsx  PulseFeedIcon.jsx  SkeletonCard.jsx  SourcePicker.jsx  TagInput.jsx  WarpBackground.jsx
frontend/src/components/__tests__/: EventCard.test.jsx  NewsCard.test.jsx
frontend/src/components/hero/: AntigravityField.tsx  BackgroundVideo.tsx  ClearInvoiceHero.tsx  Hero.tsx  HeroVideo.tsx  InfiniteSlider.tsx
frontend/src/components/landing/: Architecture.tsx  CTA.tsx  Capabilities.tsx  Features.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  Testimonials.tsx  WhyUs.tsx
frontend/src/components/ui/: Pulsar.tsx  infinite-slider.tsx
frontend/src/constants/: taxonomy.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  GeneratorView.jsx  LandingPage.jsx  Onboarding.jsx  Settings.jsx
pulsefeed/backend/: .env.example  Dockerfile  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
pulsefeed/backend/agents/: feed_personalizer.py
pulsefeed/backend/mcp_servers/: pg_search_server.py
pulsefeed/backend/recommender/: mcp_client.py  retriever_agent.py  schemas.py  validator_node.py
pulsefeed/backend/routes/: events.py  feed.py  feed_v2.py  users.py
pulsefeed/backend/security/: audit.py  rate_limiter.py  sanitize.py
pulsefeed/frontend/: index.html  package-lock.json  vite.config.js
pulsefeed/frontend/src/: App.jsx  config.js  index.css
pulsefeed/frontend/src/components/: AtmosphericBackground.jsx  BrainLoader.jsx  DashboardLayout.jsx  EventCard.jsx  InterestPicker.jsx  Logo.tsx  LogoShowcase.tsx  NewsCard.jsx  SkeletonCard.jsx  TagInput.jsx  WarpBackground.jsx
pulsefeed/frontend/src/components/__tests__/: TagInput.test.jsx
pulsefeed/frontend/src/components/hero/: AntigravityField.tsx  BackgroundVideo.tsx  ClearInvoiceHero.tsx  Hero.tsx  HeroVideo.tsx  InfiniteSlider.tsx  ParticleField.tsx
pulsefeed/frontend/src/constants/: sources.js
pulsefeed/frontend/src/context/: AuthContext.jsx
pulsefeed/frontend/src/pages/: Dashboard.jsx  GeneratorView.jsx  LandingPage.jsx  Onboarding.jsx  Settings.jsx
pulsegen/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
pulsegen/backend/admin_api/: dependencies.py  main.py
pulsegen/backend/admin_api/routes/: dead_letter.py  pipeline.py  sources.py  stats.py  trends.py
pulsegen/backend/mcp_servers/: search_server.py  storage_server.py  vector_server.py
pulsegen/backend/src/: celery_app.py  config.py  retry.py  schemas.py  tasks.py
pulsegen/backend/src/connectors/: arxiv_connector.py  devto_connector.py  github_connector.py  hackernews_connector.py  huggingface_connector.py  rss_connector.py
pulsegen/backend/src/pipeline/: bouncer.py  dedup.py  extractor.py  gatekeeper.py
pulsegen/backend/src/storage/: mcp_client.py  pg_router.py
pulsegen/backend/src/swarm/: __init__.py  coordinator.py  momentum.py  query_engine.py
pulsegen/backend/tests/: conftest.py  test_admin_dead_letter.py  test_admin_pipeline.py  test_admin_sources.py  test_admin_stats.py  test_admin_trends.py  test_bouncer.py  test_coordinator.py  test_dedup.py  test_extractor.py  test_gatekeeper.py  test_momentum.py  test_query_engine.py  test_retry.py  test_schemas.py  test_security_admin_api.py  test_security_config.py  test_security_input_validation.py  test_security_secrets.py  test_tasks.py  test_usecase_pg_router.py  test_usecase_pipeline.py
pulsegen/frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
pulsegen/frontend/src/: App.jsx  config.js  index.css
pulsegen/frontend/src/components/: StatCard.jsx
pulsegen/frontend/src/hooks/: useAPI.js  useHealthCheck.js
pulsegen/frontend/src/pages/: CommandCenter.jsx  DeadLetterView.jsx  PipelineView.jsx  SourcesView.jsx
pulsegen/frontend/src/utils/: date.js
pulsegen/web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
pulsegen/web/src/: App.jsx  config.js  index.css
pulsegen/web/src/components/: StatCard.jsx
pulsegen/web/src/hooks/: useAPI.js
pulsegen/web/src/pages/: CommandCenter.jsx  DeadLetterView.jsx  PipelineView.jsx  TrendsView.jsx
pulsegen/web/src/utils/: date.js
(+14 files in other folders)
