[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.0",
    "celery>=5.4.0",
    "chromadb>=0.6.0",
    "ddgs>=9.11.4",
    "fastapi>=0.135.1",
    "feedparser>=6.0.11",
    "google-genai>=1.68.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.0.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "apscheduler>=3.10.0",
]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "arxiv.*",
    "feedparser.*",
    "psycopg2.*",
    "pgvector.*",
    "apscheduler.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-python-jose>=3.3.4",
]
