[project]
name = "pulsegen"
version = "2.0.0"
description = "PulseGen — standalone ingestion microservice with Celery worker and FastAPI admin API"
requires-python = ">=3.13"
dependencies = [
    # Async HTTP
    "httpx>=0.27",
    "feedparser>=6.0",
    # Celery + Redis
    "celery[gevent]>=5.4",
    "redis>=5.0",
    # Pydantic + Settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Google AI (free-tier Flash models)
    "google-genai>=1.0",
    # Source connectors
    "arxiv>=2.1",
    "ddgs>=6.0",
    # Utilities
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    # FastAPI + Admin API
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    # Database (PostgreSQL + Vector)
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "freezegun>=1.5",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
